--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "python-levenshtein>=0.20.0",
     "tqdm>=4.65.0",
     "platformdirs>=3.0.0",
+    "psutil>=5.9.0",
+    "GPUtil>=1.4.0",
 ]
 
 [project.optional-dependencies]
